# arvore-2-3-4

./: .gitignore  CMakeLists.txt  README.md  main.c  testes.c
Arvore 2-3-4/: arv234.c  arv234.h
Arvore Rubro Negra/: arvRB.c  arvRB.h
Benchmark/: experimentos.c  experimentos.h
Conversao/: conversao.c  conversao.h
Rubro_Negra/: arvRB.c  arvRB.h
arv234/: CMakeLists.txt
arvore_2_3_4/: arv234.c  arv234.h
arvrb/: CMakeLists.txt  arvRB.c
benchmark/: CMakeLists.txt  experimentos.h
conversao/: CMakeLists.txt  conversao.h
